# IntegerCone

./: .gitmodules  CMakeLists.txt  FindMKL.cmake
include/: ConeGene.h  ConesFlattening.h  ConfigurableSolver.h  MeshDefinition.h
include/Opt/: Candidate.hpp  DRSplitting.hpp  IntegerL0DR.hpp
src/: CMakeLists.txt  ConeGene.cpp  ConesFlattening.cpp  ConfigurableSolver.cpp  MeshLaplace.cpp  MeshTopo.h  main.cpp
vs_project/include/: ConeGene.h  ConesFlattening.h
vs_project/src/: CMakeLists.txt  ConesFlattening.cpp  MeshDefinition.cpp
